--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<!-- Required meta tags --> 
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<title>Nivitec - Soluções em Serviços Online</title>
+		<title>Nivitec Telecom</title>
 		<link rel="stylesheet" href="vendors/mdi/css/materialdesignicons.min.css">
 		<link rel="stylesheet" href="vendors/owl.carousel/css/owl.carousel.css">
 		<link rel="stylesheet" href="vendors/owl.carousel/css/owl.theme.default.min.css">
@@ -15,9 +15,9 @@
 	</head>
 	<body data-spy="scroll" data-target=".navbar" data-offset="50">
 		<div id="mobile-menu-overlay"></div>
-		<nav class="navbar navbar-expand-lg fixed-top">
+		<nav class="navbar navbar-expand-lg fixed-top" style="background-color: #007bff;">
 			<div class="container">
-				<a class="navbar-brand" href="#"><h2>Nivitec</h2><p>Soluções em Serviços Online</p></a>
+				<a class="navbar-brand" href="#"><h2>Nivitec Telecom</h2><p>Ssoluções em serviços online</p></a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"><i class="mdi mdi-menu"> </i></span>
 				</button>
@@ -44,14 +44,14 @@
 						</li>
 						
 						<li class="nav-item">
-							<button type="button" class="nav-link btn btn-success" onclick="window.open( 'https://api.whatsapp.com/send?phone=5583981170988&text=Olá,%20quero%20contratar%20um%20plano%20de%20internet', '_blank')">Contratar</button>
+							<button type="button" class="nav-link btn btn-success" onclick="window.open( 'https://api.whatsapp.com/send?phone=5583964689030&text=Olá,%20quero%20contratar%20um%20plano%20de%20internet', '_blank')">Contratar</button>
 						</li>
 					</ul>
 				</div>
 			</div>
 		</nav>
 		<div class="page-body-wrapper">
-			<section id="home" class="home">
+			<section id="home" class="home" style="background-color: #007bff;">
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-12">
@@ -59,14 +59,14 @@
 								<div class="d-sm-flex justify-content-between">
 									<div data-aos="zoom-in-up">
 										<div class="banner-title">
-												<h3 class="font-weight-medium">Tecnologia de Internet Fibra Óptica
+												<h3 class="font-weight-medium">Internet com tenologia e inovação
 											</h3>
 										</div>
-										<p class="mt-3">Excelente qualidade com o menor preço.</p>
+										<p class="mt-3">Excelente qualidade com o melhor preço.</p>
 										<a href="#plans" class="btn btn-secondary mt-3">Saiba mais</a>
 									</div>
 									<div class="mt-5 mt-lg-0">
-										<img src="images/arte.png" alt="marsmello" class="img-fluid" data-aos="zoom-in-up">
+										<img src="images/networking.png" alt="marsmello" class="img-fluid" data-aos="zoom-in-up">
 									</div>
 								</div>
 							</div>
@@ -75,13 +75,18 @@
 				</div>
 			</section>
 			<section class="pricing-list" id="plans">
-				<div class="container-fluid">
+				<div class="container">
 					<div class="row" data-aos="fade-up" data-aos-offset="-500">
 						<div class="container">
 							<div class="d-sm-flex justify-content-between align-items-center mb-2">
 								<div>
 									<h3 class="font-weight-medium text-dark ">Confira nossos Planos</h3>
-									<h5 class="text-dark ">Escolha um plano que se adeque ao que precisa e que caiba no seu bolso.</h5>
+									<h5 class="text-dark ">Escolha um plano que se adeque ao que precisa e que caiba no seu bolso.<br>
+										<span style="font-weight: 600;
+										text-shadow: 3px 1px 8px #b3d7ff;
+										color: #3c37f1;
+										font-size: larger;">- Instalação com Wi-fi R$ 80,00.</span>
+									</h5>
 								</div>
 								<div class="mb-5 mb-lg-0 mt-3 mt-lg-0">
 									<div class="d-flex align-items-center">
@@ -97,48 +102,63 @@
 						</div>
 					</div>
 					<div class="row"  data-aos="fade-up" data-aos-offset="-300">
-						<div class="col-sm-3 col-md-6 col-lg-3">
-							<div class="pricing-box">
+						<div class="col-sm-4 col-md-6 col-lg-4">
+							<div class="pricing-box" style="border: solid 1px #3c37f1;">
 								<img src="images/antenna3.png" alt="starter">
-								<h6 class="font-weight-medium title-text">Plano Básico 30BM</h6>
-								<h1 class="text-amount mb-4 mt-2">R$ 55,00</h1>
+								<h6 class="font-weight-medium title-text">Plano 03BM</h6>
+								<h1 class="text-amount mb-4 mt-2">R$ 35,00</h1>
 								<ul class="pricing-list">
-									<li>Fibra Óptica - Velocidade: 30BM</li>
+									<li>Velocidade: 03BM</li>
 								</ul>
-								<a href="#" class="btn btn-outline-primary" onclick="window.open( 'https://api.whatsapp.com/send?phone=5583981170988&text=Olá,%20quero%20contratar%20um%20plano%20de%20internet', '_blank')">Contratar</a>
+								<a href="#" class="btn btn-outline-primary" onclick="window.open( 'https://api.whatsapp.com/send?phone=5583964689030&text=Olá,%20quero%20contratar%20um%20plano%20de%20internet', '_blank')">Contratar</a>
 							</div>
 						</div>
-						<div class="col-sm-3 col-md-6 col-lg-3">
-							<div class="pricing-box selected">
+						<div class="col-sm-4 col-md-6 col-lg-4">
+							<div class="pricing-box selected" style="border: solid 1px #3c37f1;">
 								<img src="images/antenna2.png" alt="starter">
-								<h6 class="font-weight-medium title-text">Plano Profissional 40MB</h6>
-								<h1 class="text-amount mb-4 mt-2">R$ 65,00</h1>
+								<h6 class="font-weight-medium title-text">Plano 06MB</h6>
+								<h1 class="text-amount mb-4 mt-2">R$ 49,90</h1>
 								<ul class="pricing-list">
-									<li>Fibra Óptica - Velocidade: 40BM</li>
+									<li>Velocidade: 06BM</li>
 								</ul>
-								<a href="#" class="btn btn-primary" onclick="window.open( 'https://api.whatsapp.com/send?phone=5583981170988&text=Olá,%20quero%20contratar%20um%20plano%20de%20internet', '_blank')">Contratar</a>
+								<a href="#" class="btn btn-primary" onclick="window.open( 'https://api.whatsapp.com/send?phone=5583964689030&text=Olá,%20quero%20contratar%20um%20plano%20de%20internet', '_blank')">Contratar</a>
 							</div>
 						</div>
-						<div class="col-sm-3 col-md-6 col-lg-3">
-							<div class="pricing-box">
+						<div class="col-sm-4 col-md-6 col-lg-4">
+							<div class="pricing-box" style="border: solid 1px #3c37f1;">
 								<img src="images/antenna1.png" alt="starter">
-								<h6 class="font-weight-medium title-text">Plano Ouro 50MB</h6>
-								<h1 class="text-amount mb-4 mt-2">$ 75,00</h1>
+								<h6 class="font-weight-medium title-text">Plano 10MB</h6>
+								<h1 class="text-amount mb-4 mt-2">$ 59,90</h1>
 								<ul class="pricing-list">
-									<li>Fibra Óptica - Velocidade: 50BM</li>
+									<li>Velocidade: 10BM</li>
 								</ul>
-								<a href="#" class="btn btn-outline-primary" onclick="window.open( 'https://api.whatsapp.com/send?phone=5583981170988&text=Olá,%20quero%20contratar%20um%20plano%20de%20internet', '_blank')">Contratar</a>
+								<a href="#" class="btn btn-outline-primary" onclick="window.open( 'https://api.whatsapp.com/send?phone=5583964689030&text=Olá,%20quero%20contratar%20um%20plano%20de%20internet', '_blank')">Contratar</a>
 							</div>
 						</div>
-						<div class="col-sm-3 col-md-6 col-lg-3">
-							<div class="pricing-box">
+					</div>
+
+					<div class="row"  data-aos="fade-up">
+						
+						<div class="col-sm-4 col-md-6 col-lg-4 offset-2">
+							<div class="pricing-box" style="border: solid 1px #3c37f1;">
 								<img src="images/antenna4.png" alt="starter">
-								<h6 class="font-weight-medium title-text">Plano Master 100MB</h6>
-								<h1 class="text-amount mb-4 mt-2">$ 100,00</h1>
+								<h6 class="font-weight-medium title-text">Plano 15MB</h6>
+								<h1 class="text-amount mb-4 mt-2">$ 69,90</h1>
 								<ul class="pricing-list">
-									<li>Fibra Óptica - Velocidade: 100BM</li>
+									<li>Velocidade: 15BM</li>
 								</ul>
-								<a href="#" class="btn btn-outline-primary" onclick="window.open( 'https://api.whatsapp.com/send?phone=5583981170988&text=Olá,%20quero%20contratar%20um%20plano%20de%20internet', '_blank')">Contratar</a>
+								<a href="#" class="btn btn-outline-primary" onclick="window.open( 'https://api.whatsapp.com/send?phone=5583964689030&text=Olá,%20quero%20contratar%20um%20plano%20de%20internet', '_blank')">Contratar</a>
+							</div>
+						</div>
+						<div class="col-sm-4 col-md-6 col-lg-4">
+							<div class="pricing-box" style="border: solid 1px #3c37f1;">
+								<img src="images/antenna5.png" alt="starter">
+								<h6 class="font-weight-medium title-text">Plano 20MB</h6>
+								<h1 class="text-amount mb-4 mt-2">$ 79,90</h1>
+								<ul class="pricing-list">
+									<li>Velocidade: 20BM</li>
+								</ul>
+								<a href="#" class="btn btn-outline-primary" onclick="window.open( 'https://api.whatsapp.com/send?phone=5583964689030&text=Olá,%20quero%20contratar%20um%20plano%20de%20internet', '_blank')">Contratar</a>
 							</div>
 						</div>
 					</div>
@@ -199,7 +219,7 @@
 							</div>
 						</div>
 						<div class="col-sm-6 text-right" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
-							<img src="images/idea.png" alt="idea" class="img-fluid">
+							<img src="images/sociais.png" alt="idea" class="img-fluid">
 						</div>
 					</div>
 				</div>
@@ -332,10 +352,10 @@
 					<div class="row">
 						<div class="col-sm-6">
 							<address>
-								<p>Rua Firmino Florentino</p>
-								<p class="mb-6">Centro - Mogeiro, PB</p>
+								<p>Estrada do Itararé, 780</p>
+								<p class="mb-6">Rua C / Loja Nº 35 -Rio de Janeiro-RJ</p>
 								<div class="d-flex align-items-center">
-									<p class="mr-4 mb-0">(83) 98117-0988)<br>
+									<p class="mr-4 mb-0">(21) 96468-9030<br>
 									<a href="mailto:janilton011@hotmail.com" class="footer-link">janilton011@hotmail.com</a></p>
 								</div>
 							</address>
@@ -361,12 +381,12 @@
 				<div class="container">
 					<div class="d-flex justify-content-between align-items-center">
 						<div class="d-flex align-items-center">
-							<h2 alt="logo" class="mr-3">Nivitec</h2>
+							<h2 alt="logo" class="mr-3">Nivitec Telecom</h2>
 							<p class="mb-0 text-small pt-1">© 2020 <a href="#" class="text-white" target="_blank">Todos os direitos reservados.</p>
 						</div>
 						<div>
 							<div class="d-flex">    
-								<a href="#" onclick="window.open( 'https://api.whatsapp.com/send?phone=5583981170988&text=Olá,%20quero%20contratar%20um%20plano%20de%20internet', '_blank')" class="text-small text-white mx-2 footer-link">Suporte </a>
+								<a href="#" onclick="window.open( 'https://api.whatsapp.com/send?phone=5583964689030&text=Olá,%20quero%20contratar%20um%20plano%20de%20internet', '_blank')" class="text-small text-white mx-2 footer-link">Suporte </a>
 							</div>
 						</div>
 					</div>
