--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 							</div>
 							<div class="d-flex justify-content-start mb-3">
 								<img src="images/tick.png" alt="tick" class="mr-3 tick-icon"  >
-								<p class="mb-0">Internet fibra óptica. Excelente qualidade, planos de até 100MB</p>
+								<p class="mb-0">Internet  de xcelente qualidade, planos de até 100MB</p>
 							</div>
 						</div>
 						<div class="col-sm-6 text-right" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
@@ -270,7 +270,7 @@
 												pretium pretium tempor.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pretium
 											</p>
 											<h6 class="testimonial-author">Phulano de Tal</h6>
-											<p class="testimonial-destination">Cliente fibra óptica</p>
+											<p class="testimonial-destination">Cliente</p>
 										</div>
 									</li>
 									<li>
@@ -280,7 +280,7 @@
 												pretium pretium tempor.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pretium
 											</p>
 											<h6 class="testimonial-author">Phulana de Tal</h6>
-											<p class="testimonial-destination">Cliente fibra óptica</p>
+											<p class="testimonial-destination">Cliente</p>
 										</div>
 									</li>
 									<li>
@@ -290,7 +290,7 @@
 												pretium pretium tempor.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pretium
 											</p>
 											<h6 class="testimonial-author">Phulana de Tal</h6>
-											<p class="testimonial-destination">Cliente fibra óptica</p>
+											<p class="testimonial-destination">Cliente</p>
 										</div>
 									</li>
 									<li>
@@ -300,7 +300,7 @@
 												pretium pretium tempor.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pretium
 											</p>
 											<h6 class="testimonial-author">Phulano de Tal</h6>
-											<p class="testimonial-destination">Cliente fibra óptica</p>
+											<p class="testimonial-destination">Cliente</p>
 										</div>
 									</li>
 								</ul>
