--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 										<span style="font-weight: 600;
 										text-shadow: 3px 1px 8px #b3d7ff;
 										color: #3c37f1;
-										font-size: larger;">- Instalação com Wi-fi R$ 80,00.</span>
+										font-size: larger;">- Instalação com Wi-fi R$ 120,00.</span>
 									</h5>
 								</div>
 								<div class="mb-5 mb-lg-0 mt-3 mt-lg-0">
@@ -356,7 +356,7 @@
 								<p class="mb-6">Rua C / Loja Nº 35 -Rio de Janeiro-RJ</p>
 								<div class="d-flex align-items-center">
 									<p class="mr-4 mb-0">(21) 96468-9030<br>
-									<a href="mailto:janilton011@hotmail.com" class="footer-link">janilton011@hotmail.com</a></p>
+									<a href="mailto:nivaldoolimpio@globo.com" class="footer-link">nivaldoolimpio@globo.com</a></p>
 								</div>
 							</address>
 							
